# server-aided-snarks

./: Cargo.toml
benches/: accumulate.rs  dual_lpn.rs  dual_steps.rs  emsm.rs  emsm_pp.rs  f_fold.rs  groth16.rs  kzg.rs  malicious_emsm.rs  msm.rs  nova.rs  permutation.rs
src/: lib.rs
src/emsm/: dual_lpn.rs  emsm.rs  mod.rs  pederson.rs  raa_code.rs
src/emsm/lpn/: dual_lpn.rs  mod.rs  primal_lpn.rs
src/emsm/matrix/: bidiagonal.rs  dense.rs  sparse.rs  t_sparse.rs
src/emsm/outsource_msm/: dual.rs  mod.rs  primal.rs
src/emsm/raa_code/: mod.rs
src/emsm/sparse_vec/: constant.rs
src/gadgets/: mod.rs  pederson.rs
src/gadgets/emsm/: dual.rs  mod.rs  primal.rs
src/gadgets/lpn/: dual_lpn.rs  mod.rs  primal_lpn.rs
src/gadgets/matrix/: bidiagonal.rs  dense.rs  mod.rs  sparse.rs  t_sparse.rs
src/gadgets/sparse_vec/: constant.rs  mod.rs  sparse_vec.rs
src/groth16/: data_structures.rs  generator.rs  mod.rs  prover.rs  r1cs_to_qap.rs  test.rs  verifier.rs
src/nova/: commitment.rs  constant_for_curves.rs  mod.rs  pederson.rs  poseidon.rs
src/nova/gadgets/: abosrb.rs  mod.rs  sparse.rs
src/nova/gadgets/non_native/: mod.rs  non_native_affine_var.rs  util.rs
src/nova/gadgets/r1cs/: conversion.rs  mod.rs  ova.rs  r1cs.rs  r1cs_var.rs
src/nova/transcript/: mod.rs  transcript.rs  transcript_var.rs
src/pcs/: kzg.rs
src/plonk/: circuit.rs  fft.rs  gate.rs  mod.rs  permutation.rs  prover.rs  verifier.rs
